<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/constraint_root_tag">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText1"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/copy"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1"
            android:hint="@string/paste"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <Button
            android:text="@string/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copy_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.185"/>

    <Button
            android:text="@string/paste"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/paste_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/copy_button"
            />

    <Button
            android:text="@string/change_text"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:id="@+id/change_text_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.731"
            app:layout_constraintEnd_toEndOf="@+id/paste_button"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/copy_button"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.453"/>

    <Button
            android:text="@string/check_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_description_button"
            app:layout_constraintStart_toStartOf="@+id/change_text_button"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/change_text_button"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/change_text_button"
            app:layout_constraintHorizontal_bias="0.525"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/change_text_editText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/change_text_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/paste_button"
            android:hint="@string/change_text_to"/>

</android.support.constraint.ConstraintLayout>